Move gstreamer/bash armhf to Debian Bullseye
colibri-imx6-10508300:~$ uname -a
Linux colibri-imx6-10508300 5.4.61-5.0.0-devel+git.26abb5b86e17 #1-TorizonCore SMP Fri Oct 2 18:49:21 UTC 2020 armv7l armv7l armv7l GNU/Linux
colibri-imx6-10508300:~$ docker pull 192.168.15.57:5000/sample-gstreamer-bash-arm32:2 && docker-compose -f docker-compose.armhf.yaml up
2: Pulling from sample-gstreamer-bash-arm32
Digest:
sha256:556fe0b3c318b7bb528d5b5db2ff20d91bb214b5a213955dcef15cf1982f641f
Status: Image is up to date for 192.168.15.57:5000/sample-gstreamer-bash-arm32:2
192.168.15.57:5000/sample-gstreamer-bash-arm32:2
Starting torizon_weston_1 ... done
Starting torizon_wayland_1 ... done
Attaching to torizon_weston_1, torizon_wayland_1
weston_1   | SoC is: 'i.MX6DL'
weston_1   | SoC has GPU: true
weston_1   | SoC has DPU: false
weston_1   | g2d implementation: viv
weston_1   | Switching to VT 7
weston_1   | Date: 2020-10-06 UTC
weston_1   | [20:16:36.327] weston 8.0.0
weston_1   |                https://wayland.freedesktop.org
weston_1   |                Bug reports to:
https://gitlab.freedesktop.org/wayland/weston/issues/
weston_1   |                Build: 8.0.0
<...>
wayland_1  | Setting pipeline to PAUSED ...
wayland_1  | Pipeline is PREROLLING ...
wayland_1  |
/GstPipeline:pipeline0/GstVideoTestSrc:videotestsrc0.GstPad:src: caps =
video/x-raw, width=(int)320, height=(int)240, framerate=(fraction)30/1,
multiview-mode=(string)mono, format=(string)I420,
pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive
wayland_1  |
/GstPipeline:pipeline0/GstVideoConvert:videoconvert0.GstPad:src: caps =
video/x-raw, width=(int)320, height=(int)240, framerate=(fraction)30/1,
multiview-mode=(string)mono, format=(string)I420,
pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive
wayland_1  |
/GstPipeline:pipeline0/GstVideoScale:videoscale0.GstPad:src: caps =
video/x-raw, width=(int)320, height=(int)240, framerate=(fraction)30/1,
multiview-mode=(string)mono, format=(s

--- a/gstreamer/bash/simple-pipeline/docker-compose.armhf.yaml
+++ b/gstreamer/bash/simple-pipeline/docker-compose.armhf.yaml
@@ -1,25 +1,20 @@
 version: "2.4"
 services:
+
   weston:
-    image: torizon/weston:1
-    # please uncomment the following two lines to accept the
-    # EULA required to run imx8 vivante graphic drivers
-    #environment:
-    # - -ACCEPT_FSL_EULA=1
+    image: torizon/weston:2
     # Required to get udev events from host udevd via netlink
     network_mode: host
-    devices:
-      - /dev/video2:/dev/video2
     volumes:
       - type: bind
         source: /tmp
         target: /tmp
-      - type: bind  
-        source: /run/udev
-        target: /run/udev
       - type: bind
         source: /dev
         target: /dev
+      - type: bind
+        source: /run/udev
+        target: /run/udev
     cap_add:
       - CAP_SYS_TTY_CONFIG
     # Add device access rights through cgroup...
@@ -30,13 +25,20 @@ services:
       - 'c 4:7 rmw'
       # ... for /dev/input devices
       - 'c 13:* rmw'
-      - 'c 199:* rmw'
       # ... for /dev/dri devices
       - 'c 226:* rmw'
-      - 'c 81:* rmw'
+    command: --developer weston-launch --tty=/dev/tty7 --user=torizon
+    healthcheck:
+        test: ["CMD", "test", "-S", "/tmp/.X11-unix/X0"]
+        interval: 5s
+        timeout: 4s
+        retries: 6
+        start_period: 10s
+
   wayland:
-    depends_on: 
-      - weston
+    depends_on:
+      weston:
+        condition: service_healthy
     image: <your-username>/<your-image>
     devices:
       - /dev/video2:/dev/video2
