--- a/gstreamer/bash/simple-pipeline/docker-compose.arm64.yaml
+++ b/gstreamer/bash/simple-pipeline/docker-compose.arm64.yaml
@@ -1,22 +1,24 @@
 version: "2.4"
 services:
+
   weston:
-    image: torizon/weston-vivante:1
-    network_mode: host
+    image: torizon/weston-vivante:2
+    # please uncomment the following two lines to accept the
+    # EULA required to run imx8 vivante graphic drivers
     environment:
-      - ACCEPT_FSL_EULA=1
-    devices:
-      - /dev/video2:/dev/video2
+     - ACCEPT_FSL_EULA=1
+    # Required to get udev events from host udevd via netlink
+    network_mode: host
     volumes:
       - type: bind
         source: /tmp
         target: /tmp
-      - type: bind  
-        source: /run/udev
-        target: /run/udev
       - type: bind
         source: /dev
         target: /dev
+      - type: bind
+        source: /run/udev
+        target: /run/udev
     cap_add:
       - CAP_SYS_TTY_CONFIG
     # Add device access rights through cgroup...
@@ -30,13 +32,20 @@ services:
       - 'c 199:* rmw'
       # ... for /dev/dri devices
       - 'c 226:* rmw'
-      - 'c 81:* rmw'
+    scale: 1
+    command: --developer weston-launch --tty=/dev/tty7 --user=torizon
+    healthcheck:
+        test: ["CMD", "test", "-S", "/tmp/.X11-unix/X0"]
+        interval: 5s
+        timeout: 4s
+        retries: 6
+        start_period: 10s
+
   wayland:
-    depends_on: 
-      - weston
+    depends_on:
+      weston:
+        condition: service_healthy
     image: <your-username>/<your-image>
-    devices:
-      - /dev/video2:/dev/video2
     volumes:
        - /tmp:/tmp 
        - /sys:/sys
