Adapt tflite to Debian Bullseye
In Colibri IMX6:

colibri-imx6-10508300:~$ uname -a
Linux colibri-imx6-10508300 5.4.61-5.0.0-devel+git.26abb5b86e17 #1-TorizonCore SMP Wed Sep 23 16:54:17 UTC 2020 armv7l armv7l armv7l GNU/Linux
colibri-imx6-10508300:~$ docker run --rm 192.168.15.57:5000/sample-tflite-arm32:2
Loading test images
image.jpg : Maltese dog

Inference time: 0.6000053882598877 s

In Apalis IMX8:

apalis-imx8-06548503:~$ uname -a
Linux apalis-imx8-06548503 5.4.47-5.0.0-devel+git.80472db9aed9 #1-TorizonCore SMP PREEMPT Mon Oct 5 18:44:10 UTC 2020 aarch64 aarch64 aarch64 GNU/Linux
apalis-imx8-06548503:~$ docker run --rm 192.168.15.57:5000/sample-tflite-arm64:2
Loading test images
image.jpg : Maltese dog

Inference time: 0.09533166885375977 s

Related-to: TOR-1320

Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/tflite/Dockerfile
+++ b/tflite/Dockerfile
@@ -5,7 +5,7 @@ ARG PKG_ARCH=aarch64
 # For arm32v7 use: 
 # ARG PKG_ARCH=armv7l
 
-FROM --platform=$ARCH_ARG torizon/debian:1-buster
+FROM --platform=$ARCH_ARG torizon/debian:2-bullseye
 WORKDIR /home/torizon
 
 ARG PKG_ARCH
@@ -27,7 +27,7 @@ RUN apt-get -y update && apt-get install -y \
   && apt-get clean && apt-get autoremove
 
 # Install Tensorflow Lite
-RUN wget https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp37-cp37m-linux_$PKG_ARCH.whl && pip3 install tflite_runtime-* && rm tflite_runtime-*
+RUN wget https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp38-cp38-linux_${PKG_ARCH}.whl && pip3 install tflite_runtime-* && rm tflite_runtime-*
 
 # Download the model
 ENV MODEL_LINK https://storage.googleapis.com/download.tensorflow.org/models/tflite/mobilenet_v1_1.0_224_quant_and_labels.zip
