--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -3,8 +3,7 @@ services:
 
   weston:
     image: torizon/weston-vivante:2
-    # please uncomment the following two lines to accept the
-    # EULA required to run imx8 vivante graphic drivers
+    # Accept the EULA required to run imx8 vivante graphic drivers
     environment:
      - ACCEPT_FSL_EULA=1
     # Required to get udev events from host udevd via netlink
