Fix internal portainer port for kiosk mode in debian-container sample
Now the Portainer login UI appears correctly in the vdeo output, while
Portainer is also accessible externally through port 8840.

Tested in Colibri-IMX6 and Apalis-IMX8 with:

$ docker-compose -f <compose_file> down --volumes --remove-orphans
Removing torizon_weston_1    ... done
Removing torizon_portainer_1 ... done
Removing network torizon_default
Removing volume torizon_portainer_data
$ docker-compose -f <compose_file> pull
Pulling weston    ... done
Pulling portainer ... done
Pulling kiosk     ... done
$ docker-compose -f <compose_file> up
Creating network "torizon_default" with the default driver
Creating volume "torizon_portainer_data" with default driver
Creating torizon_weston_1    ... done
Creating torizon_portainer_1 ... done
Creating torizon_kiosk_1     ... done
Attaching to torizon_weston_1, torizon_portainer_1, torizon_kiosk_1

Related-to: TOR-1320

Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -46,7 +46,7 @@ services:
     command: -H unix:///var/run/docker.sock --admin-password '$$2y$$05$$lYD3omTmZ0c0jMDsNX6k8.GwS2NMHbbDzkMBWcDzBt6/K9EyuMPHi' --logo 'https://developer.toradex.com/images/logo_toradex_header.png'
     labels:
       - owner=acme
-    network_mode: host
+    # Make portainer web UI externally accessible through port 8840
     ports:
       - 8840:9000
     volumes:
@@ -62,12 +62,11 @@ services:
     image: torizon/kiosk-mode-browser:2
     security_opt:
       - seccomp:unconfined
-    command: --window-mode http://portainer:8840
+    command: --window-mode http://portainer:9000
     shm_size: 256mb
     device_cgroup_rules:
       # ... for /dev/dri devices
       - 'c 226:* rmw'
-    network_mode: host
     volumes:
       - type: bind
         source: /tmp
