python-qml: use non-gles libqt5gui5
python3-pyside2.qtgui is not co-installable/usable with libqt5gui5-gles
due to https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=974101

Use libqt5gui5(non-gles) for all targets. For armhf libqt5gui5 is built
with -opengl es2 so there is technically no change. For arm64 this
sample now only supports non-vivante builds until the linked bug gets
fixed.

The mangling fixes are not required for libqt5gui5(non-gles), hence
removed. Once the bug is fixed, we should switch to -gles packages to
take advantage of the Vivante stack on arm64.

Related-to: TOR-1407

Signed-off-by: Abdur Rehman <abdur.rehman@toradex.com>

--- a/python-qml/Dockerfile
+++ b/python-qml/Dockerfile
@@ -2,43 +2,34 @@ ARG IMAGE_ARCH=linux/arm
 # For arm64 use:
 # ARG IMAGE_ARCH=linux/arm64
 ARG IMAGE_NAME=qt5-wayland
-# For arm64 with Vivante use:
-# ARG IMAGE_NAME=qt5-wayland-vivante
-ARG APPNAME=show_readings.py
+# For arm64 without Vivante use:
+# ARG IMAGE_NAME=qt5-wayland
+# arm64 with Vivante(ARG IMAGE_NAME=qt5-wayland-vivante) is currently not
+# supported as python3-pyside2.qtgui is not co-installable with libqt5qui5-gles
+# See: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=974101
 
-# One of the dependencies of the python-qml sample container is python3-pyside2.qtgui.
-#
-# Under Debian Bullseye, python3-pyside2.qtgui strictly depends on libqt5gui5 (>= 5.14).
-# This looks to be a dangling dependency as libqt5gui5 appears twice in the dependency list of the package:
-#
-# $ apt-cache show python3-pyside2.qtgui | grep Depends
-# Depends: python3 (<< 3.9), python3 (>= 3.8~), libc6 (>= 2.17), libgcc-s1 (>= 3.0), libpyside2-py3-5.15 (>= 5.15.0), libqt5core5a (>= 5.14), libqt5gui5 (>= 5.14), libqt5gui5 (>= 5.14.1) | libqt5gui5-gles (>= 5.14.1), libshiboken2-py3-5.15 (>= 5.15.0), libstdc++6 (>= 4.1.1), python3-pyside2.qtcore
-#
-# This is a problem in Vivante containers because libqt5gui5-gles replaces libqt5gui5 in these containers,
-# forbidding the installation of dependent packages for the python-qml sample application.
-#
-# Let's work around by mangling the python3-pyside2.qtgui package and remove the libqt5gui5 dependency from it.
-FROM --platform=$IMAGE_ARCH torizon/debian:2-bullseye AS package_fix
-RUN apt-get update \
-    && apt-get -y install --no-install-recommends binutils xz-utils \
-    && apt-get download python3-pyside2.qtgui \
-    && ar x python3-pyside2.qtgui_*.deb \
-    && tar -xJf control.tar.xz \
-    && sed -i '/^Depends:/s/, libqt5gui5 (>= 5.14)//' control \
-    && tar -cJf control.tar.xz control md5sums \
-    && ar rcs python3-pyside2.qtgui.deb debian-binary control.tar.xz data.tar.xz \
-    && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+ARG APPNAME=show_readings.py
 
 # Build the sample python-qml container.
 FROM --platform=$IMAGE_ARCH torizon/$IMAGE_NAME:2
+
 ARG APPNAME
 
-# Install the python3-pyside2.qtgui package with fixed dependencies.
-COPY --from=package_fix python3-pyside2.qtgui.deb .
-RUN apt-get -y update \
-    && apt-get install -y --no-install-recommends ./python3-pyside2.qtgui.deb \
-    && rm ./python3-pyside2.qtgui.deb \
-    && apt-mark hold python3-pyside2.qtgui \
+# Remove libqt5gui5-gles in favor of libqt5gui5. On armhf both libqt5gui5 and
+# libqt5gui5-gles are built with -opengl es2, so technically there is no change
+# for armhf
+RUN apt-get remove libqt5opengl5 --allow-change-held-packages
+RUN apt-get remove libqt5gui5-gles
+
+# Install libqt5gui5 and also reinstall libqt5opengl5 and the packages dependent
+# on libqt5gui5-gles that got removed as a result of removing libqt5gui5-gles
+RUN apt-get -y update && apt-get install -y --no-install-recommends \
+    libqt5opengl5 libqt5gui5 libqt5printsupport5 libqt5quick5 libqt5quickparticles5 \
+    libqt5quickshapes5 libqt5quicktest5 libqt5quickwidgets5 libqt5waylandclient5 \
+    libqt5waylandcompositor5 libqt5widgets5 qml-module-qtquick-layouts \
+    qml-module-qtquick-particles2 qml-module-qtquick-shapes \
+    qml-module-qtquick-window2 qml-module-qtquick2 \
+    qml-module-qttest qtwayland5 \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # Install further dependencies for the sample application.
@@ -53,6 +44,7 @@ RUN apt-get -y update && apt-get install -y --no-install-recommends \
     python3-pyside2.qtwidgets \
     python3-pyside2.qtqml \
     python3-pyside2.qtnetwork \
+    python3-pyside2.qtgui \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
  
 WORKDIR /
