--- a/adc/Dockerfile
+++ b/adc/Dockerfile
@@ -3,7 +3,7 @@ ARG ARCH_ARG=linux/arm
 ARG IMAGE_TAG=2-bullseye
 
 # First stage, x86_64 build container
-FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:2 AS cross-container
+FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:$IMAGE_TAG AS cross-container
 
 # copy project source
 WORKDIR /project
