gpio: bash: add sample to GitLab CI pipeline
Build the GPIO Bash sample on new commits pushed to GitLab.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -206,6 +206,34 @@ docker-build-dbus-python-arm64v8:
     DOCKERFILE_FOLDER: "dbus/python/"
   stage: build-demos
 
+docker-build-gpio-bash:
+  extends: .docker-build
+  before_script:
+    - export MAJOR="${DEBIAN_MAJOR}"
+    - export MINOR="${DEBIAN_MINOR}"
+    - export PATCH="${DEBIAN_PATCH}"
+  variables:
+    BASE_NAME: debian
+    IMAGE_NAME: arm32v7-sample-gpio-bash
+    IMAGE_ARCH: linux/arm/v7
+    IMAGE_TAG: ${DEBIAN_MAJOR}-${DEBIAN_RELEASE}
+    DOCKERFILE_FOLDER: "gpio/bash/"
+  stage: build-demos
+
+docker-build-gpio-bash-arm64v8:
+  extends: .docker-build
+  before_script:
+    - export MAJOR="${DEBIAN_MAJOR}"
+    - export MINOR="${DEBIAN_MINOR}"
+    - export PATCH="${DEBIAN_PATCH}"
+  variables:
+    BASE_NAME: debian
+    IMAGE_NAME: arm64v8-sample-gpio-bash
+    IMAGE_ARCH: linux/arm64/v8
+    IMAGE_TAG: ${DEBIAN_MAJOR}-${DEBIAN_RELEASE}
+    DOCKERFILE_FOLDER: "gpio/bash/"
+  stage: build-demos
+
 # Only for 64-bit vivante arch
 docker-build-dlr-gstreamer-arm64v8:
   extends: .docker-build
@@ -263,6 +291,14 @@ docker-build-dbus-python-multiarch:
     IMAGE_NAME: sample-dbus-python
     IMAGE_NAME_32: arm32v7-sample-dbus-python
     IMAGE_NAME_64: arm64v8-sample-dbus-python
+  stage: build-multiarch
+
+docker-build-gpio-bash-multiarch:
+  extends: .docker-build-multiarch
+  variables:
+    IMAGE_NAME: sample-gpio-bash
+    IMAGE_NAME_32: arm32v7-sample-gpio-bash
+    IMAGE_NAME_64: arm64v8-sample-gpio-bash
   stage: build-multiarch
 
 # Docker deploy jobs
